# OpenGL_Playground

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/render/: assetManager.cpp  assetManager.h  shaderManager.cpp  shaderManager.h  shaderProgram.cpp  shaderProgram.h
src/shaders/: test.frag  test.vert
src/utils/: GL_LOG.cpp  GL_Log.h  math.hpp
